# test_sycl

./: .gitignore  CMakeLists.txt  VS2022调试说明.md  simple_sycl_test.cpp  vscode调试说明.md
1210/DPCPPConsoleApplication1/: DPCPPConsoleApplication1.sln
1210/DPCPPConsoleApplication1/DPCPPConsoleApplication1/: DPCPPConsoleApplication1.cpp  DPCPPConsoleApplication1.vcxproj
1210/DPCPPConsoleApplication1/DPCPPConsoleApplication1/x64/Debug/DPCPPCon.33910bb4.tlog/: Cl.items.tlog  DPCPPConsoleApplication1.lastbuildstate  icx-cl-clang-cl-clang-offload-bundler-llvm-objcopy.delete.1.tlog  icx-cl-clang-cl.1884.delete.1.tlog  icx-cl-clang-cl.540.delete.1.tlog  icx-cl.command.1.tlog  icx-cl.read.1.tlog  icx-cl.write.1.tlog  link-icx-cl-clang-cl-clang-offload-bundler.6368-llvm-objcopy.delete.1.tlog  link-icx-cl-clang-cl-clang-offload-bundler.9728-llvm-objcopy.delete.1.tlog  link-icx-cl-clang-cl-clang.delete.1.tlog  link-icx-cl.write.1.tlog
1210/DPCPPConsoleApplication1/DPCPPConsoleApplication1/x64/Debug/DPCPPCon.33910bb4.tlog/link/: icx-cl-link.command.1.tlog  icx-cl.read.1.tlog
1210/DPCPPConsoleApplication1/x64/Debug/: test.runsettings
